--- a/.github/workflows/SeleniumIde.yml
+++ b/.github/workflows/SeleniumIde.yml
@@ -27,6 +27,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
+
+    - name: Install ChromeDriver
+      run: sudo apt-get install -y chromium-chromedriver
         
     - name: Restore dependencies
       run: dotnet restore
@@ -36,5 +39,5 @@ jobs:
       
     - name: Test
       env: 
-        CHROMEWEBDRIVER: /usr/bin/google-chrome
+        CHROMEWEBDRIVER: /usr/bin/chromedriver
       run: dotnet test --verbosity normal
