--- a/.github/workflows/SeleniumIde.yml
+++ b/.github/workflows/SeleniumIde.yml
@@ -28,6 +28,9 @@ jobs:
       
     - name: Build
       run: dotnet build --no-restore
+
+    - name: Make selenium-manager executable
+      run: chmod +x ./SeleniumIDE/bin/Debug/net6.0/selenium-manager/linux/selenium-manager
       
     - name: Test
       run: dotnet test --no-build --verbosity normal
